syntax = "proto3";

// Object 

message Mahasiswa {
  string id = 1;
  string nama = 2;
  string nrp = 3;
  int64 nilai = 4;
}

message MahasiswaList {
  repeated Mahasiswa mahasiswa = 1;
}

message MahasiswaId {
  string id = 1;
}

message Empty {}

// Service 
service MahasiswaService {
  // Create 
  rpc addMahasiswa (Mahasiswa) returns (Mahasiswa) {}
  // Read 
  rpc getAll (Empty) returns (MahasiswaList) {}
  rpc getMahasiswa (MahasiswaId) returns (Mahasiswa) {}
  // Update
  rpc editMahasiswa (Mahasiswa) returns (Mahasiswa) {}
  // Delete
  rpc deleteMahasiswa (MahasiswaId) returns (Empty) {}
}